(fix): dark mode

--- a/sass/colors.scss
+++ b/sass/colors.scss
@@ -1,8 +1,9 @@
 // sass/colors.scss
-$background: #3d405b;
-$dark: #81b29a;
+$background: #122942;
+$dark: #122942;
 $mid: #705199;
-$mid-light: #e07a5f;
+$mid-light: #e39f84;
 $light: #f2cc8f;
 $lightest: #f4f1de;
-$white: rgba(255,255,255,.92);
+$white: rgba(255,255,255,.85);
+$button-bg: #364f6a73
